# sph_seepage_flows

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: WindowsCUDA.yml  main.yml
blender_template/: demo.blend  demo.blend1
cmake/checkCUDA/: check_cuda.cu
configuration/: root_directory.h.in
extlib/include/: file_io.hpp
extlib/include/Alembic/Util/: Config.h
extlib/include/Imath/: ImathConfig.h
extlib/lib/: Alembic.lib  partio.lib
extlib/vtk/include/vtk-9.2/: vtkBuild.h  vtkConfigureDeprecated.h  vtkDebug.h  vtkDebugRangeIterators.h  vtkEndian.h  vtkFeatures.h  vtkIOCGNSReaderModule.h  vtkIOCONVERGECFDModule.h  vtkIOCesium3DTilesModule.h  vtkIOChemistryModule.h  vtkIOHDFModule.h  vtkIOIOSSModule.h  vtkIOMovieConfigure.h  vtkIOVideoConfigure.h  vtkLegacy.h  vtkOptions.h  vtkPlatform.h  vtkRenderingHyperTreeGridModule.h  vtkRenderingLICOpenGL2Module.h  vtkRenderingOpenGL2Module.h  vtkSMP.h  vtkThreads.h  vtkTypeFloat32Array.h  vtkTypeFloat64Array.h  vtkTypeInt16Array.h  vtkTypeInt32Array.h  vtkTypeInt64Array.h  vtkTypeInt8Array.h  vtkTypeUInt16Array.h  vtkTypeUInt32Array.h  vtkTypeUInt64Array.h  vtkTypeUInt8Array.h  vtkVersionFull.h  vtkVersionMacros.h  vtk_cgns.h  vtk_exprtk.h  vtk_fmt.h  vtk_glew.h  vtk_hdf5.h  vtk_ioss.h  (+4 more)
extlib/vtk/lib/: vtkChartsCore-9.2.lib  vtkCommonColor-9.2.lib  vtkCommonComputationalGeometry-9.2.lib  vtkCommonCore-9.2.lib  vtkCommonDataModel-9.2.lib  vtkCommonExecutionModel-9.2.lib  vtkCommonMath-9.2.lib  vtkCommonMisc-9.2.lib  vtkCommonSystem-9.2.lib  vtkCommonTransforms-9.2.lib  vtkDICOMParser-9.2.lib  vtkDomainsChemistry-9.2.lib  vtkDomainsChemistryOpenGL2-9.2.lib  vtkFiltersAMR-9.2.lib  vtkFiltersCore-9.2.lib  vtkFiltersExtraction-9.2.lib  vtkFiltersFlowPaths-9.2.lib  vtkFiltersGeneral-9.2.lib  vtkFiltersGeneric-9.2.lib  vtkFiltersGeometry-9.2.lib  vtkFiltersHybrid-9.2.lib  vtkFiltersHyperTree-9.2.lib  vtkFiltersImaging-9.2.lib  vtkFiltersModeling-9.2.lib  vtkFiltersParallel-9.2.lib  vtkFiltersParallelImaging-9.2.lib  vtkFiltersPoints-9.2.lib  vtkFiltersProgrammable-9.2.lib  vtkFiltersSMP-9.2.lib  vtkFiltersSelection-9.2.lib  vtkFiltersSources-9.2.lib  vtkFiltersStatistics-9.2.lib  vtkFiltersTexture-9.2.lib  vtkFiltersTopology-9.2.lib  vtkFiltersVerdict-9.2.lib  vtkGeovisCore-9.2.lib  vtkIOAMR-9.2.lib  vtkIOAsynchronous-9.2.lib  vtkIOCGNSReader-9.2.lib  vtkIOCONVERGECFD-9.2.lib  (+102 more)
houdini_template/: demo.hipnc
resources/vtk/: dam.vtk  slide.vtk  slide2.vtk
scripts/: build_vs2015_win64.bat  build_vs2015_win64_release.bat  build_vs2017_win64.bat  build_vs2017_win64_release.bat  build_vs2019_win64.bat  build_vs2019_win64_release.bat  build_vs2022_win64.bat  build_vs2022_win64_debug.bat  build_vs2022_win64_release.bat  compile_release_version.bat
scripts/ffmpeg/: assemble_exr.bat  assemble_exr.py
seepage_flow/: CMakeLists.txt  format.bat
seepage_flow/include/: kiri_define.h  kiri_log.h  kiri_pch.h  kiri_timer.h  kiri_utils.h
seepage_flow/include/abc/: alembic-manager-base.h  particles-alembic-manager.h
seepage_flow/include/cuda/: cuda_helper.h
seepage_flow/include/vtk_helper/: vtk_polygonal_writer.h  vtk_reader.h  vtk_structure_grid.h
seepage_flow/src/: kiri_log.cpp
seepage_flow/src/seepageflow/: main.cpp
seepage_flow_cuda/: CMakeLists.txt
seepage_flow_cuda/include/: sf_cuda_define.h
seepage_flow_cuda/include/kiri_pbs_cuda/: cuda_common.cuh  cuda_searcher_struct.cuh  kiri_pbs_pch.cuh
seepage_flows/: CMakeLists.txt
seepage_flows/include/: kiri_define.h  kiri_log.h  kiri_pch.h  kiri_timer.h  kiri_utils.h
seepage_flows/src/: kiri_log.cpp
seepage_flows/src/seepageflow/: main.cpp
seepage_flows_cuda/: CMakeLists.txt
seepage_flows_cuda/include/: sf_cuda_define.h
seepage_flows_cuda/include/kiri_pbs_cuda/: cuda_common.cuh  cuda_searcher_struct.cuh  kiri_pbs_pch.cuh
seepage_flows_cuda/include/kiri_pbs_cuda/cuda_helper/: helper_string.h
seepage_flows_cuda/include/kiri_pbs_cuda/data/: cuda_boundary_params.h  cuda_seepageflow_params.h
seepage_flows_cuda/include/kiri_pbs_cuda/emitter/: cuda_boundary_emitter.cuh  cuda_emitter.cuh  cuda_volume_emitter.cuh
seepage_flows_cuda/include/kiri_pbs_cuda/kernel/: cuda_sph_kernel.cuh
seepage_flows_cuda/include/kiri_pbs_cuda/particle/: cuda_iisf_particles.cuh  cuda_particles.cuh  cuda_sf_particles.cuh
seepage_flows_cuda/include/kiri_pbs_cuda/searcher/: cuda_neighbor_searcher.cuh  cuda_neighbor_searcher_gpu.cuh
seepage_flows_cuda/include/kiri_pbs_cuda/solver/: cuda_solver_common_gpu.cuh
seepage_flows_cuda/include/kiri_pbs_cuda/solver/dem/: cuda_dem_solver_common_gpu.cuh
seepage_flows_cuda/include/kiri_pbs_cuda/solver/seepageflow/: cuda_iisph_sf_solver.cuh  cuda_iisph_sf_solver_gpu.cuh  cuda_sph_sf_solver.cuh  cuda_sph_sf_solver_gpu.cuh  cuda_wcsph_sf_solver.cuh  cuda_wcsph_sf_solver_gpu.cuh
seepage_flows_cuda/include/kiri_pbs_cuda/solver/sph/: cuda_iisph_solver_common_gpu.cuh  cuda_sph_solver_common_gpu.cuh
seepage_flows_cuda/include/kiri_pbs_cuda/system/: cuda_base_system.cuh  cuda_sf_system.cuh  cuda_sph_system_gpu.cuh
seepage_flows_cuda/src/kiri_pbs_cuda/data/: cuda_sph_params.cpp
seepage_flows_cuda/src/kiri_pbs_cuda/emitter/: cuda_emitter.cpp  cuda_volume_emitter.cpp
seepage_flows_cuda/src/kiri_pbs_cuda/particle/: box_particles.cpp  box_particles_ren2014.cpp  box_particles_yan2016.cpp  box_particles_yang2015.cpp  cuda_dem_particles.cu  cuda_iisf_particles.cu  cuda_iisph_particles.cu  cuda_multisph_ren14_particles.cu  cuda_multisph_yan16_particles.cu  cuda_sf_particles.cu  cuda_sph_bn_particles.cu  cuda_sph_particles.cu  particles_emitter.cpp  particles_emitter_yan2016.cpp  particles_sampler_basic.cpp  volume_emitter_dem.cpp  volume_emitter_sph_dem.cpp
seepage_flows_cuda/src/kiri_pbs_cuda/searcher/: cuda_neighbor_searcher.cu
seepage_flows_cuda/src/kiri_pbs_cuda/solver/seepage_flow/: cuda_iisph_sf_solver.cpp  cuda_iisph_sf_solver.cu  cuda_sph_sf_solver.cpp  cuda_sph_sf_solver.cu  cuda_wcsph_sf_solver.cpp
seepage_flows_cuda/src/kiri_pbs_cuda/system/: cuda_base_system.cu  cuda_sf_system.cu
(+190 files in other folders)
